--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   expandable_text: ^2.2.0
   http: ^0.13.3
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
