--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^2.3.0
   cupertino_icons: ^1.0.2
   expandable_text: ^2.2.0
+  firebase_auth: ^2.0.0
+  firebase_core: ^1.3.0
+  firebase_storage: ^9.0.0
   http: ^0.13.3
+  image_picker: ^0.8.1+3
+  provider: ^5.0.0
   url_launcher: ^6.0.9
 
 dev_dependencies:
