--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
   firebase_storage: ^9.0.0
+  flutter_spinkit: ^5.0.0
   http: ^0.13.3
   image_picker: ^0.8.1+3
   provider: ^5.0.0
