--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.3
   image_picker: ^0.8.1+3
   provider: ^5.0.0
+  shared_preferences: ^2.0.6
   url_launcher: ^6.0.9
 
 dev_dependencies:
